k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-shopping-cart-srtknk
  labels:
    name: server-shopping-cart-srtknk
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: server-shopping-cart-srtknk
  template:
    metadata:
      labels:
        component: server-shopping-cart-srtknk
    spec:
      containers:
        - name: server-shopping-cart-srtknk
          image: anhiuem492/server-srtknk:server-shopping-cart
          imagePullPolicy: Always
          ports:
            - containerPort: 10400
          resources:
            limits:
              cpu: 20m
              memory: 64Mi
              ephemeral-storage: 64Mi
            requests:
              cpu: 20m
              memory: 64Mi
