k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-shopping-cart-srtknk
  labels:
    name: server-shopping-cart-srtknk
spec:
  type: ClusterIP
  selector:
    component: server-shopping-cart-srtknk
  ports:
    - port: 3000
      targetPort: 10400
